--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expressjs": "^1.0.1",
     "mongodb": "^4.12.1",
     "multer": "^1.4.5-lts.1",
+    "serve-favicon": "^2.5.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
